Fix some components not responsible on mobile

--- a/client/src/components/CookieNotification/styles.css
+++ b/client/src/components/CookieNotification/styles.css
@@ -1,28 +1,28 @@
 .cookie--block {
-  z-index: 2147483635 !important;
-  position: fixed !important;
-  width: 500px !important;
-  left: 0 !important;
-  right: 0 !important;
-  bottom: 12px !important;
-  margin: 0 auto !important;
+  z-index: 2147483635;
+  position: fixed;
+  max-width: 450px;
+  left: 0;
+  right: 0;
+  bottom: 12px;
+  margin: 0 auto;
 }
 
 .cookie--body {
-  padding-top: 10px !important;
-  padding-right: 45px !important;
-  padding-bottom: 10px !important;
-  padding-left: 30px !important;
-  color: #ffffff !important;
-  background-color: rgba(37, 37, 37, 1) !important;
-  box-shadow: 0 10px 24px 0 rgba(54, 61, 77, 0.5) !important;
+  padding-top: 10px;
+  padding-right: 45px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  color: #ffffff;
+  background-color: rgba(37, 37, 37, 1);
+  box-shadow: 0 10px 24px 0 rgba(54, 61, 77, 0.5);
   border: 1px solid #aaa;
 }
 
 .cookie--description {
-  line-height: 1.5 !important;
-  font-size: 14px !important;
-  margin: 0 24px 0 0 !important;
+  line-height: 1.5;
+  font-size: 14px;
+  margin: 0 24px 0 0;
   font-weight: 400;
 }
 
@@ -34,7 +34,7 @@
   position: absolute;
   top: -9px;
   right: 0px;
-  padding: 20px !important;
+  padding: 20px;
 }
 
 .cookie--close button {
